Change toggleClass for removeClass

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 				$.ajax({
 					url: '/' + target,
 					success: function() {
-						$(this).toggleClass('on');
+						$(this).removeClass('on');
 					},
 				});
 			});
