--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>CSS3 Buttons</title>
+	<title>Controlpanel</title>
 	<link rel="stylesheet" href="{{ style }}">
 	<link rel="stylesheet" href="{{ rangeslider }}">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
