--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,12 @@
 		</section>	
 		<section>
 			<a data-toggle="ajax-req" href="#" id="reboot">&#xf021;</a>
+		</section>
+		<section>
+			<a data-toggle="ajax-req" href="#" id="auto_on">&#xf087;</a>
+		</section>		
+		<section>
+			<a data-toggle="ajax-req" href="#" id="auto_off">&#xf00d;</a>
 		</section>		
 	</div>
 	<script>
